--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+    "build": "next build --no-type-checking"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.3",
